--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tailwindcss -i ./src/assets/css/input.css -o ./src/assets/css/output.css --watch"
+    "dev": "npx tailwindcss -i ./src/assets/css/input.css -o ./src/assets/css/output.css --watch",
+    "build": "npx tailwindcss -i ./src/assets/css/input.css -o ./src/assets/css/output.css"
   },
   "keywords": [],
   "author": "",
